--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
-<html>
-<body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><link rel='shortcut icon' href='../media/interface/logo.png
+' type='image/x-icon'><link rel='icon' href='../media/interface/logo.png
+' type='image/x-icon'><meta charset='utf-8'><meta name='description' content='Personal Website
+'><meta name='viewport' content='width=device-width, initial-scale=1.0'><meta name='twitter:card' content='summary'><meta name='twitter:site' content='abstractxan
+'><meta name='twitter:title' content='abstractxan
+'><meta name='twitter:description' content='Personal Website
+'><meta name='twitter:creator' content='@abstractxan 
+'><meta name='twitter:image' content='../media/interface/logo.png
+'><meta property='og:title' content='abstractxan
+'><meta property='og:site_name' content='abstractxan
+'><title> abstractxan
+ - Home</title><link rel='stylesheet' type='text/css' href='https://d33wubrfki0l68.cloudfront.net/css/50909d2cfae717823b08de4496fabd968bff05d2/links/main.css'/></head><body class='Home'><header><a id='logo' href='/site/home'><img src='https://d33wubrfki0l68.cloudfront.net/6f15aec87156e1bc77657ae144b867a62e4db2cf/07ff4/media/interface/logo.png' alt='AbstractXan' ></a>
+</header><main class='home'><h2>Home
+</h2><ul class='pagelist'><li><a href='/site/about'>About
+</a></li><li><a href='/site/journal'>Journal
+</a></li><li><a href='/site/bucket_list'>Bucket List
+</a></li></ul><h2>Projects
+</h2><ul class='pagelist'><li><a href='/site/mizi'>Mizi
+</a></li><li><a href='/site/miniprojects'>Mini-projects
+</a></li><li><a href='/site/enigma_2020'>Enigma 2020
+</a></li><li><a href='/site/enigma_2019'>Enigma 2019
+</a></li><li><a href='/site/id5022'>ID5022
+</a></li><li><a href='/site/tensorflowjs'>Tensorflow.JS
+</a></li></ul><h2>Articles
+</h2><ul class='pagelist'><li><a href='/site/kubernetes'>Kubernetes
+</a></li><li><a href='/site/raspberry_pi'>Raspberry Pi
+</a></li><li><a href='/site/data'>Data
+</a></li><li><a href='/site/ms_excel'>MS Excel
+</a></li><li><a href='/site/vim'>Vim
+</a></li><li><a href='/site/php'>PHP
+</a></li><li><a href='/site/serverless'>Serverless
+</a></li><li><a href='/site/diffiehellmann_key_exchange'>Diffie-Hellmann Key Exchange
+</a></li><li><a href='/site/sql'>SQL
+</a></li><li><a href='/site/deep_learning_image_classification'>Deep Learning Image Classification
+</a></li><li><a href='/site/object_oriented_programming'>Object Oriented Programming
+</a></li><li><a href='/site/c_stl_cheatsheet'>C++ STL Cheatsheet
+</a></li><li><a href='/site/unity2d'>Unity2D
+</a></li><li><a href='/site/git'>Git
+</a></li><li><a href='/site/golang'>Golang
+</a></li><li><a href='/site/note_taking'>Note Taking
+</a></li></ul><h2>Resources
+</h2><ul class='pagelist'><li><a href='/site/competitive_coding'>Competitive Coding
+</a></li><li><a href='/site/machine_learning'>Machine Learning
+</a></li><li><a href='/site/computer_science'>Computer Science
+</a></li><li><a href='/site/docker'>Docker
+</a></li><li><a href='/site/cryptography'>Cryptography
+</a></li><li><a href='/site/microservices'>Microservices
+</a></li></ul><h2>Miscellaneous
+</h2><ul class='pagelist'><li><a href='/site/coding_log'>Coding Log
+</a></li><li><a href='/site/pixelart'>PixelArt
+</a></li><li><a href='/site/the_library'>The Library
+</a></li><li><a href='/site/sketchbook_2019'>Sketchbook 2019
+</a></li></ul><hr/></main><footer><p><a href='https://creativecommons.org/licenses/by-nc-sa/4.0/'><img src='https://d33wubrfki0l68.cloudfront.net/fcf9e7e548a00b8fd7ee93891d5be4b5614dedf1/891e8/media/interface/cc.svg'></a><a href='https://fosstodon.org/web/accounts/222003'><img src='https://d33wubrfki0l68.cloudfront.net/daff8d15112058c8e17b1176bf2dc780a42add3a/b7452/media/interface/mastodon.svg'></a><a href='https://twitter.com/AbstractXan'><img src='https://d33wubrfki0l68.cloudfront.net/dd150f2fdf1ccb9cf76ffaba9dec3d312961d452/1d4cd/media/interface/twitter.svg'></a><a href='https://github.com/AbstractXan'><img src='https://d33wubrfki0l68.cloudfront.net/9f2604df2bf8ec1190947bba1cfacb70562f89b1/2adef/media/interface/github.svg'></a><a href="hyper://6599978e4f895acfa32f6d185af863135af01df917945d5f12c0517a50ac1e19/"><img src="https://d33wubrfki0l68.cloudfront.net/6934329cad173a2de72059ab096f4f013ec9525e/6de90/media/interface/beaker.svg"></a><a href="https://webring.xxiivv.com/#random" target='_blank'><img src="https://webring.xxiivv.com/icon.black.svg"/></a><p>Abstractxan Ⓒ 2020 — BY-NC-SA 4.0</p><p></p><form action='https://tinyletter.com/abstractxan' method='post' target='popupwindow' onsubmit='window.open(\'https://tinyletter.com/abstractxan\', \'popupwindow\', \'scrollbars=yes,width=800,height=600\');return true'><input type='email' value='' name='EMAIL' class='email' placeholder='email@address.com' required=''><input type='submit' value='Subscribe' name='subscribe' class='button'></form>
+</p></footer></body></html>
