--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html><html lang='en'><head><link rel='shortcut icon' href='../media/interface/logo.png
-' type='image/x-icon'><link rel='icon' href='../media/interface/logo.png
-' type='image/x-icon'><meta charset='utf-8'><meta name='description' content='Personal Website
+' type='image/x-icon'><link rel='icon' href='https://avatars1.githubusercontent.com/u/42683695?s=120&v=4' type='image/x-icon'><meta charset='utf-8'><meta name='description' content='Personal Website
 '><meta name='viewport' content='width=device-width, initial-scale=1.0'><meta name='twitter:card' content='summary'><meta name='twitter:site' content='abstractxan
 '><meta name='twitter:title' content='abstractxan
 '><meta name='twitter:description' content='Personal Website
