--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 '><meta property='og:title' content='abstractxan
 '><meta property='og:site_name' content='abstractxan
 '><title> abstractxan
- - Home</title><link rel='stylesheet' type='text/css' href='https://d33wubrfki0l68.cloudfront.net/css/50909d2cfae717823b08de4496fabd968bff05d2/links/main.css'/></head><body class='Home'><header><a id='logo' href='/site/home'><img src='https://d33wubrfki0l68.cloudfront.net/6f15aec87156e1bc77657ae144b867a62e4db2cf/07ff4/media/interface/logo.png' alt='AbstractXan' ></a>
+ - Home</title><link rel='stylesheet' type='text/css' href='https://avatars0.githubusercontent.com/u/42683695?s=460&v=4' alt='AbstractXan' ></a>
 </header><main class='home'><h2>Home
 </h2><ul class='pagelist'><li><a href='/site/about'>About
 </a></li><li><a href='/site/journal'>Journal
