--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html><html lang='en'><head><link rel='shortcut icon' href='../media/interface/logo.png
-' type='image/x-icon'><link rel='icon' href='https://avatars1.githubusercontent.com/u/42683695?s=120&v=4' type='image/x-icon'><meta charset='utf-8'><meta name='description' content='Personal Website
+' type='image/x-icon'><link rel='icon' href='../media/interface/logo.png
+' type='image/x-icon'><meta charset='utf-8'><meta name='description' content='Personal Website
 '><meta name='viewport' content='width=device-width, initial-scale=1.0'><meta name='twitter:card' content='summary'><meta name='twitter:site' content='abstractxan
 '><meta name='twitter:title' content='abstractxan
 '><meta name='twitter:description' content='Personal Website
@@ -9,7 +10,7 @@
 '><meta property='og:title' content='abstractxan
 '><meta property='og:site_name' content='abstractxan
 '><title> abstractxan
- - Home</title><link rel='stylesheet' type='text/css' href='https://avatars0.githubusercontent.com/u/42683695?s=460&v=4' alt='AbstractXan' ></a>
+ - Home</title><link rel='stylesheet' type='text/css' href='https://d33wubrfki0l68.cloudfront.net/css/50909d2cfae717823b08de4496fabd968bff05d2/links/main.css'/></head><body class='Home'><header><a id='logo' href='/site/home'><img src='https://1.gravatar.com/avatar/76efa8d519486493330d01e0f3da1af4' alt='AbstractXan' ></a>
 </header><main class='home'><h2>Home
 </h2><ul class='pagelist'><li><a href='/site/about'>About
 </a></li><li><a href='/site/journal'>Journal
